# comlaint_system_fastapi

./: .env_example  README.md  alembic.ini  constants.py  db.py  main.py  pyproject.toml
api/: auth.py  complaints.py  routers.py  users.py
commands/: create_super_user.py
managers/: auth_manager.py  complaint.py  user.py
migrations/: env.py
migrations/versions/: 35cdb17152de_added_field_updated_at_to_user.py  65ddc94b0316_added_field_updated_at_to_complaint_.py  c07318056306_added_transactios.py
models/: complaint.py  transactions.py  user.py
schemas/: complaint.py  user.py
services/: s3_service.py  utils.py  wise_service.py
